#pragma once

class IDeviceModel
{
public:
    virtual void Initialize() = 0;
};
