#include "Lcd2004Model.hpp"

Lcd2004Model::Lcd2004Model()
{
}
