#include "Ws28xxModel.hpp"

Ws28xxModel::Ws28xxModel()
{
}
